# llm-zoomcamp-hw-04-evaluation

./: .env.example  .gitignore  evaluation_utils.py  homework.md  homework_marimo.py  pyproject.toml  rag_helper.py
course-material/code/: 01-data-gen.ipynb  02-search-eval.ipynb  03-rag-evals.ipynb  04-llm-judge.ipynb  insert_titles_in_notebook.py  number_titles.py  pyproject.toml  rag_helper.py
course-material/lessons/: 01-intro.md  02-ground-truth.md  03-ground-truth-batch.md  04-search-evaluation.md  05-search-metrics.md  06-search-tuning.md  11-evaluation-intro.md  12-rag-answers.md  13-llm-as-judge.md  14-agent-evaluation.md  15-next-steps.md
