[project]
name = "llm-zoomcamp-2026-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.11.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.28.1",
    "tqdm>=4.67.3",
]
